Ajustes diversos no código